fixed spacing on bigger screen

--- a/ArtLab.css
+++ b/ArtLab.css
@@ -36,13 +36,13 @@ html{
     top: 0;
     left: 0;
     width:100%;
-    height: 354.5vh;
+    height: 369vh;
     z-index: -2;
   }
   
   #bg-lines{
     opacity: .10;
-    height: 354.5vh;
+    height: 369vh;
     width:100%;
     position: absolute;
     z-index:-5;
