--- a/NuCamp.css
+++ b/NuCamp.css
@@ -5,7 +5,7 @@ html{
 
 body{
   background-color: #1c1c2c;
-  height: 450vh;
+  height: 398vh;
   margin:0px;
 }
 
@@ -30,15 +30,21 @@ button{
   top: 0;
   left: 0;
   width:100%;
-  height: 467vh;
+  height: 398vh;
   z-index: -2;
 }
 
 #bg-lines{
   opacity: .10;
   position: absolute;
-  height: 467vh;
+  height: 398vh;
   width:100%;
+}
+
+.pageContent{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 ::-webkit-scrollbar {
@@ -284,6 +290,11 @@ color: rgba(0, 234, 255, 0.587);
 margin-left:50px;
 margin-top:80px;
 }
+
+.about{
+  width:70%
+}
+
 
 .paragraph{
 margin-top: 45px;
